--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <script src="https://kit.fontawesome.com/a14ae32021.js" crossorigin="anonymous"></script>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>This one is for my Varchhu</title>
+<title>Za Moju Barbaru</title>
 
 <style type="text/css">
 @font-face {
@@ -23,29 +23,25 @@
 <div id="mainDiv">
 	<div id="content">
 		<div id="code">
-			<span class="comments">/**</span><br />
-			<span class="space"/><span class="comments">*THE CODE OF LOVE</span><br />
-			<span class="space"/><span class="comments">*/</span><br />
-			Hey Girl !<br />
-			Do you remember the day we first met?<br />
-			<span class="comments">// The ET-LAB Friday. </span><br />
-			Since that day a spark begun;<br />
-			<span class="comments">// Your face Your Voice Your Words.</span><br />
-			Your everything got imprinted in my heart;<br />
-			As the time went on;<br />
-			The Bond grew stronger and stronger;<br />
-			Journey from Infatuation to Love;<br />
-			We have traveled a long way together;<br />
-			There have been fights ;<br />
-			<span class="comments">// And I'm sure there will be more.</span><br />
-			But our Bond will always grow back Stronger;<br />
+			Sjećaš li se dana kada smo se prvi put upoznali?<br />
+			<span class="comments">// Naš prvi zagrljaj </span><br />
+			Od tog dana sam znao<br />
+			<span class="comments">// Tvoje lice, tvoj glas, tvoje riječi.</span><br />
+			Sve tvoje urezalo se u moje srce<br />
+			Kako je vrijeme prolazilo<br />
+			Nasa ljubav je postajala sve jača i jača<br />
+			Putovanje od simpatije do ljubavi<br />
+			Zajedno smo prešli dug put<br />
+			Bilo je svađa<br />
+			<span class="comments">// I siguran sam da će ih još biti.</span><br />
+			Ali naša veza će uvijek ponovno ojačati<br />
 			<br>
 			<br>
-			All I want to say is:<br />
-			Baby, I will love you forever;<br />
+			Sve što želim reći je<br />
+			Ljubavi, voljet ću te zauvijek<br />
 			<br>
 			<br>
-			Now If you want to hug me you can touch the heart below<br />
+			Ako me sada želiš zagrliti, možeš dotaknuti srce ispod<br />
 			<br>
 			<span id="heartspan">
 			<a href="image.jpg"><i class="fas fa-heart" id="icon"></i></a>
@@ -55,12 +51,12 @@
 			<canvas id="garden"></canvas>
 			<div id="words">
 				<div id="messages">
-					वर्षा ऋतु FOREVER
+					ZAUVIJEK
 					<div id="elapseClock"></div>
 				</div>
 				<div id="loveu">
-					I LOVE YOU SO MUCH<br/>
-					<div class="signature">- RITVIK</div>
+					VOLIM TE NAJVIŠE NA SVIJETU<br/>
+					<div class="signature">- PETAR</div>
 				</div>
 			</div>
 		</div>
@@ -71,9 +67,9 @@
 var offsetX = $("#loveHeart").width() / 2;
 var offsetY = $("#loveHeart").height() / 2 - 55;
 var together = new Date();
-together.setFullYear(2016, 8, 5);
-together.setHours(16);
-together.setMinutes(30);
+together.setFullYear(2024, 12, 13);
+together.setHours(1);
+together.setMinutes(0);
 together.setSeconds(0);
 together.setMilliseconds(0);
 
